# price-compare

./: test.json
be/: CC.csv  ai.py  analysis.py  api.py  config.py  main.py  models.py  new.py  output.json  product_results.json  product_search_iPhone_15_20250611_085740.json  product_search_iPhone_16_20250611_090253.json  pyproject.toml  requirements.txt  scrape.py  scraping.py  test.ipynb  test.py  test_scrape.py  utils.py
frontend/: .gitignore  index.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ErrorState.tsx  LoadingState.tsx  ProductCard.tsx  ResultsSection.tsx  SearchForm.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
