[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.6.3",
    "crewai>=0.121.0",
    "fastapi[standard]>=0.115.12",
    "firecrawl-py>=2.8.0",
    "google-adk>=0.5.0",
    "playwright>=1.52.0",
    "selenium>=4.32.0",
]
